deployment/overlays/dev/keycloak-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: keycloak
          args: 
            - start
            - --hostname=auth.hms.test
            - --http-enabled=true
            - --proxy-headers=xforwarded
            - --db=postgres
            - --db-url-host=postgres
            - --db-username=keycloak
            - --db-password=keycloak
