deployment/overlays/dev/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
